added the << operator overload for displaying UniStr easier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,5 +63,6 @@
         "variant": "cpp",
         "csignal": "cpp",
         "cinttypes": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
